# syndat

./: README.md  dt_null_encoder.py  label_encoder.py  parser.py  plotter.py  pyproject.toml  requirements.txt  syndat.py  syndat_usage_example.ipynb
syndat/: data_generator.py  label_encoder.py
tutorial/: demo_visuals.ipynb  syndat_usage_example.ipynb
