[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syndat"
version = "0.0.1"
authors = [
  { name="Aras Kayvan", email="mkayvan@gmail.com" },
]
description = "A small package to generate synthetic data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"